<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="android.example.com.udacitysinglescreenapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo"
            android:src="@drawable/at_picture"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/iv_picture"
            android:layout_alignTop="@id/iv_picture"
            android:layout_alignEnd="@id/iv_picture"
            android:layout_alignBottom="@id/iv_picture"
            android:gravity="center|bottom"
            android:textColor="@color/textColorTitle"
            android:textSize="45sp"
            android:fontFamily="sans-serif"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tv_cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:background="@color/colorAccent"
            android:fontFamily="serif"
            android:text="@string/cuisine"/>

        <TextView
            android:id="@+id/tv_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cuisine"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/textColor3"
            android:text="@string/hours"/>


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hours"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/textColorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/call"/>
            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:autoLink="phone"
                android:text="@string/number"/>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/textColorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/tv_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:text="@string/type_value"/>

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/textColorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/website"/>

            <TextView
                android:id="@+id/tv_web_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:autoLink="web"
                android:text="@string/web_address"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="@color/textColorSecondary"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/tv_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:text="@string/address_value"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hours"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/asterik"
                android:fontFamily="serif"
                android:text="@string/delivery"/>

            <TextView
                android:id="@+id/tv_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/asterik"
                android:fontFamily="serif"
                android:text="@string/bar"/>

            <TextView
                android:id="@+id/outdoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/asterik"
                android:fontFamily="serif"
                android:text="@string/outdoor"/>

            <TextView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/asterik"
                android:fontFamily="serif"
                android:text="@string/music"/>

            <TextView
                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:drawableStart="@drawable/asterik"
                android:text="@string/wifi"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>

